--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
+body{
+  background: linear-gradient( #101010, #242238);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+.list {
+  font-family: Arial, sans-serif;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  h1{
+      font-size: 50px;
+      color: #f4f4f4;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style: none;
+  padding: 0;
+}
+li {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #f4f4f4;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+input{
+  border: none;
+  height: 25px;
+  border-radius: 5px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+button {
+  background: rgb(241, 50, 50);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  padding: 6px;
+  cursor: pointer;
+  border-radius: 5px;
 }
